height change in eat out js for map stretch issue for mobile view

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,6 @@ main.snug {
     margin: 0 auto;
 }
 
-nav a:hover {}
 
 .container-fluid {
     justify-content: space-between;
